<resources>
    <string name="app_name">RegistrationForm</string>
    <string name="et_first_name">First name</string>
    <string name="et_last_name">Last name</string>
    <string name="et_email">Email</string>
    <string name="bt_register">register</string>
    <string name="tv_first_name">First name</string>
    <string name="tv_last_name">Last name</string>
    <string name="tv_email">Email</string>
</resources>